# klikk-up-backend

./: README.md  _utils.py  db.sqlite3  me  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  models.py  otp.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_point_balance_user_referred_by.py  0003_user_level_user_xp.py  0004_remove_user_level.py  0005_user_date_joined.py  0006_user_is_partner.py
admin_panel/: admin.py  models.py  serializers.py  urls.py  views.py
admin_panel/migrations/: 0001_initial.py  0002_story_alter_task_confirmation_code.py  0003_activity.py  0004_story_created_at_task_created_at.py  0005_story_estimated_time_task_estimated_time.py  0006_remove_activity_points_earned_remove_activity_xp.py  0007_dailycheckin.py  0008_activity_points_alter_activity_activity_type.py  0009_rename_points_activity_reward.py  0010_coupon_created_at.py  0011_coursecategory_course.py  0012_alter_coursecategory_slug.py  0013_story_banner_task_banner.py  0014_alter_task_banner.py  0015_alter_story_banner.py  0016_giveaway_giveawayparticipation.py  0017_announcement.py  0018_giveaway_is_active.py  0019_alter_giveaway_options.py  0020_alter_story_estimated_time_alter_task_estimated_time.py  0021_story_expired_task_expired.py  0026_task_is_riddle.py  (+5 more)
api/: checkin_service.py  mail_service.py  models.py  serializers.py  urls.py  utils.py  views.py
serverConfig/: authenticate.py  settings.py  urls.py
wallets/: admin.py  emails.py  models.py  paystack.py  serializers.py  services.py  signals.py  urls.py  views.py
(+10 files in other folders)
